<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- UI strings -->
    <string name="app_name">DIYWear</string>
    <string name="main_user_experience">VID体验</string>
    <string name="main_swith_model">模特</string>
    <string name="main_turn">转身</string>
    <string name="main_undo">上一步</string>
    <string name="main_diff">对比</string>
    <string name="main_redo">下一步</string>
    <string name="main_save">保存至手机</string>
    <string name="main_share">分享</string>
    <string name="main_changeBg">更换背景</string>
    <string name="popup_goods_list">商品清单</string>
    <string name="popup_all_to_cart">全部放入购物车</string>
    <string name="popup_price">价格</string>
    <string name="popup_cart">购物车</string>
    <string name="popup_remove">移除</string>
    <string name="progress_dialog_title">请等待</string>
    <string name="progress_dialog_content">载入中……</string>
    <string name="toast_add_to_cart_successlly">已加入购物车</string>
    <string name="toast_remove_from_list_successlly">已移除</string>
    <string name="toast_do_not_add_it_twice">请勿重复添加</string>
    <string name="toast_all_add_to_cart_successlly">已全部加入购物车</string>
    <string name="toast_all_add_to_cart_failed">商品列表为空</string>
    <string name="main_type_shoes">鞋子</string>
    <string name="main_type_shawl">围巾</string>
    <string name="main_type_coat">外套</string>
    <string name="main_type_down_clothes">下装</string>
    <string name="main_type_upper_clothes">上装</string>
    <string name="main_type_wears">服装</string>
    <string name="view_goods_info_detail">详情</string>
    <string name="view_goods_info_remove">移除</string>
    <string name="view_goods_info_recommend">搭配推荐</string>
    <string name="view_goods_info_previous">《</string>
    <string name="view_goods_info_next">》</string>
    <string name="view_goods_info_wear_inner">穿在内</string>
    <string name="view_goods_info_wear_outter">穿在外</string>
    <string name="toast_no_need_to_switch">无需切换</string>
    <string name="toast_only_one_model_now">只有一个模特</string>
    <string name="toast_no_goods_item_under_the_type">该类别下无商品</string>
    <string name="alert_dial_info_title">商品信息</string>
    <string name="view_empty_cart_nothing">模特身上没有任何东西</string>
    <string name="main_goods_list_brand">品牌</string>
    <string name="main_goods_list_category">分类</string>
    <string name="main_goods_list_menu_brand_all">全部品牌</string>
    <string name="main_goods_list_menu_category_all">全部分类</string>
    <string name="main_goods_list_menu_collocation_all">搭配</string>
    <string name="main_goods_list_view_total_count_prefix">共</string>
    <string name="main_goods_list_view_total_count_suffix">件商品</string>
    <string name="main_goods_list_view_sort">筛选</string>
    <string name="main_goods_list_view_sort_price_desc">价格升序</string>
    <string name="main_goods_list_view_sort_price_asc">价格降序</string>
    <string name="main_goods_list_view_sort_id">按照ID</string>
    <string name="main_goods_list_view_sort_time">按时间</string>
    <string name="toast_image_saved_to_local_successlly">图片已成功保存到本地，</string>
    <string name="umeng_share_content">我喜爱的模特搭配，分享一下</string>
    <string name="alert_dial_undo_title">确认撤销？</string>
    <string name="alert_dial_undo_message">这将会去除模特身上的所有衣服</string>
    <string name="alert_dial_undo_yes_btn">是</string>
    <string name="alert_dial_undo_no_btn">否</string>
    <string name="alert_dial_pick_model_title">选择模特</string>
    <string name="alert_dial_save_to_local_title">确认保存？</string>
    <string name="alert_dial_save_to_local_message">这将会保存模特试衣图到本地</string>
    <string name="toast_no_cloth_on_model">模特没有试穿任何衣物</string>
    <string name="view_empty_collation_nothing">该件商品没有搭配</string>

    <!-- system strings -->
    <string name="api_key">7bb93c4e63d37d2810b063f38f0f87f8</string>
    <string name="api_domain_api">http://api.ihomebay.com/</string>
    <string name="api_domain_api_pure">api.ihomebay.com</string>
    <string name="api_domain_file">http://files.ihomebay.com/</string>
    <string name="api_domain_file_pure">files.ihomebay.com</string>
    <string name="tag_id">0</string>
    <string name="tag_brands_id">1</string>
    <string name="tag_from_cart_window">3</string>

</resources>