<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/TextView_save_notice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alert_dial_save_to_local_message" />

    <Button
        android:id="@+id/Button_save_yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextView_save_notice"
        android:text="@string/alert_dial_undo_yes_btn" />

    <Button
        android:id="@+id/Button_save_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextView_save_notice"
        android:layout_toRightOf="@+id/Button_save_yes"
        android:text="@string/alert_dial_undo_no_btn" />

</RelativeLayout>