<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:weightSum="3" >

    <Button
        android:id="@+id/Button_changeBg"
        android:layout_width="0dip"
        android:layout_height="50dip"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:background="@null"
        android:text="@string/main_changeBg"
        android:textSize="20sp" />

    <Button
        android:id="@+id/Button_save"
        android:layout_width="0dip"
        android:layout_height="50dip"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:background="@null"
        android:text="@string/main_save"
        android:textSize="20sp" />

    <Button
        android:id="@+id/Button_share"
        android:layout_width="0dip"
        android:layout_height="50dip"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:background="@null"
        android:text="@string/main_share"
        android:textSize="20sp" />

</LinearLayout>