<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/TextView_view_goods_info_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/TextView_view_goods_info_dress_way"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/Button_view_goods_info_dress_way_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/Button_view_goods_info_dress_way_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/Button_view_goods_info_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_goods_info_detail" />

        <Button
            android:id="@+id/Button_view_goods_info_remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_goods_info_remove" />
    </LinearLayout>

    <TextView
        android:id="@+id/TextView_view_goods_info_recommend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_goods_info_recommend" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/Button_view_goods_info_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_goods_info_previous" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/Button_view_goods_info_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_goods_info_next" />
    </LinearLayout>

</LinearLayout>