<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/ImageView_item_cart_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" />

    <TextView
        android:id="@+id/TextView_item_cart_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/ImageView_item_cart_icon"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/TextView_item_cart_price_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextView_item_cart_name"
        android:layout_toRightOf="@+id/ImageView_item_cart_icon"
        android:text="@string/popup_price"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/TextView_item_cart_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextView_item_cart_name"
        android:layout_toRightOf="@+id/TextView_item_cart_price_label"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/Button_item_cart_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextView_item_cart_price"
        android:layout_toRightOf="@+id/ImageView_item_cart_icon"
        android:background="@drawable/bg_button_popup"
        android:text="@string/popup_cart" />

    <Button
        android:id="@+id/Button_item_cart_remove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextView_item_cart_price"
        android:layout_toRightOf="@+id/Button_item_cart_add"
        android:background="@drawable/bg_button_popup"
        android:text="@string/popup_remove" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dip"
        android:layout_below="@+id/ImageView_item_cart_icon"
        android:background="@android:color/black" />

</RelativeLayout>